# support_system

./: README.md  github  github.pub  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
data/: company_policies.csv
src/data/: company_policies.csv  knowledge_base.json
src/support_system/: crew.py  main.py
src/support_system/chunking/: adaptive_chunker.py  policy_aware_chunker.py  semantic_chunker.py
src/support_system/config/: agents.yaml  tasks.yaml
src/support_system/core/: enhanced_rag_manager.py  performance_optimizer.py  predictive_assistant.py  user_manager.py
src/support_system/retrieval/: hybrid_retriever.py  query_enhancer.py  reranker.py
src/support_system/testing/: ab_test_framework.py  metrics_collector.py
vector_db/: chroma.sqlite3
