[project]
name = "support_system"
version = "0.1.0"
description = "support_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
support_system = "support_system.main:run"
run_crew = "support_system.main:run"
train = "support_system.main:train"
replay = "support_system.main:replay"
test = "support_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
